# Wormhole

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: indicator.rs  main.rs  toasthelper.rs  util.rs  vmcompute.rs  vmsocket.rs
backend/src/proxies/: icons.rs  menu.rs  mod.rs  status_notifier_item.rs  status_notifier_watcher.rs  statusnotifieritem.rs  statusnotifierwatcher.rs
backend/src/services/: filechooser.rs  mod.rs  notifications.rs  status_notifier_host.rs  status_notifier_watcher.rs  statusnotifierhost.rs  statusnotifierwatcher.rs
backend/src/services/notifications/: mod.rs  toasthelper.rs
backend/src/services/status_notifier/: host.rs  icon.rs  indicator.rs  menu.rs  mod.rs  systray.rs  watcher.rs
backend/src/util/: mod.rs  vmcompute.rs  vmsocket.rs  wslpath.rs
backend/zbus_patches/: non-native-endian.patch  wsl.patch
bridge/: Cargo.toml  xdp.sh
bridge/src/: main.rs  vmsocket.rs
bridge/src/services/: icons.rs  mod.rs  wsl.rs
client/: Cargo.toml
client/data/: wsl.portal
client/src/: main.rs  vmsocket.rs
client/src/services/: filechooser.rs  interceptor.rs  mod.rs  notifications.rs
demo/: Cargo.toml  README.md
demo/src/: main.rs
demo/src/components/: gnotification.rs  mod.rs  notify_rust.rs
rpc/: Cargo.toml  build.rs  notifications.proto
rpc/protos/: filechooser.proto  notifications.proto
rpc/src/: lib.rs
server/: Cargo.toml
server/bindings/: Cargo.toml  build.rs
server/src/: main.rs  notifications.rs  toasthelper.rs  util.rs  vmcompute.rs  vmsocket.rs  wslpath.rs
server/src/proxies/: mod.rs
server/src/services/: filechooser.rs  mod.rs  notifications.rs  statusnotifier.rs  statusnotifierwatcher.rs
session-manager/: Cargo.toml
session-manager/src/: common.rs  daemon.rs  main.rs
src/: common.rs  daemon.rs  main.rs
wsm/: Cargo.toml
wsm/src/: daemon.rs  main.rs
xdp-backend/: Cargo.toml
xdp-backend/src/: main.rs  notifications.rs
