[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "xdp-wsl"
path = "src/main.rs"

[dependencies]
# dependencies for windows stuff
uuid = { version = "0.8", features = ["serde"] }
widestring = "0.4"
xml-rs = "0.8"

futures = "0.3"
tokio = { version = "1.0", features = [
	"io-util",
	"macros",
	"net",
	"rt-multi-thread",
	"sync",
] }

# other
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
scopeguard = "1.1"
log = "0.4"
env_logger = "0.9.0"
regex = "1.5"
anyhow = "1.0"
new_mime_guess = "4.0.0"
once_cell = "1.8"
image = "0.23"

zbus = { path = "../../zbus/zbus", features = ["tokio", "wsl"] }
zvariant = { path = "../../zbus/zvariant" }
zvariant_derive = { path = "../../zbus/zvariant_derive" }

[dependencies.windows]
version = "0.30.0"
features = [
	"alloc",
	"Data_Xml_Dom",
	"Foundation",
	"UI_Notifications",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_Networking_WinSock",
	"Win32_Storage_FileSystem",
	"Win32_System_Com",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_UI_Controls_RichEdit",
	"Win32_UI_HiDpi",
	"Win32_UI_Shell_Common",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
]
