[package]
name = "bridge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "xdp-wsl-bridge"
path = "src/main.rs"

[dependencies]
# unix stuff
libc = "0.2"
nix = "0.23.0"

futures = "0.3"
tokio = { version = "1.0", features = [
	"io-util",
	"macros",
	"net",
	"rt-multi-thread",
	"time",
] }

# dbus
zbus = { version = "2.0.0-beta.7", features = ["tokio"] }
zvariant = "2.9"
zvariant_derive = "2.9"
serde = "1.0"
serde_repr = "0.1"

# other
byteorder = "1.4"
scopeguard = "1.1.0"
log = "0.4"
env_logger = "0.9.0"
linicon = { version = "2.2", features = ["system-theme"] }
whoami = "1.2"
