[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "xdg-desktop-portal-wsl"
path = "src/main.rs"

[dependencies]
# unix stuff
libc = "0.2"
nix = "0.23.0"

# grpc stuff
futures = "0.3"
tokio = { version = "1.0", features = [
	"macros",
	"rt-multi-thread",
	"net",
	"time",
] }
tonic = "0.5"
prost = "0.8"
tower = "0.4"
rpc = { path = "../rpc" }

# dbus
zbus = "2.0.0-beta.7"
zvariant = "2.9"
zvariant_derive = "2.9"
serde = "1.0"

# other
scopeguard = "1.1.0"
log = "0.4"
env_logger = "0.9.0"
