[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
windows = "0.19"
widestring = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde"] }
bindings = { path = "bindings" }
scopeguard = "1.1"
tokio = { version = "1.0", features = ["macros", "net"] }
