[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dependencies for windows stuff
bindings = { path = "bindings" }
uuid = { version = "0.8", features = ["serde"] }
widestring = "0.4"
windows = "0.21"
xml-rs = "0.8"

futures = "0.3"
tokio = { version = "1.0", features = [
	"io-util",
	"macros",
	"net",
	"rt-multi-thread",
	"sync",
] }

# other
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
scopeguard = "1.1"
log = "0.4"
env_logger = "0.9.0"
regex = "1.5"
anyhow = "1.0"
new_mime_guess = "3.0"

zbus = { path = "../../zbus/zbus", features = ["tokio", "wsl"] }
zvariant = { path = "../../zbus/zvariant" }
zvariant_derive = { path = "../../zbus/zvariant_derive" }
