[package]
name = "session-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wsl-session-mgr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
machine-uid = "0.2"
nix = "0.22"
single-instance = "0.3"
